[package]
name = "server-list-fix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]
retour = { version = "0.3", features = ["static-detour"] }
paste = "1.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Console"
] }

